# mmidi

./: README.md  meson.build
meson/lvtk-cairo/: meson.build
src/: manifest.ttl.in  meson.build  setlist.ttl.in
